# glfwinfo

./: .gitlab-ci.yml  CMakeLists.txt  changelog.md  readme.md
.github/workflows/: clang.yml  gcc.yml  msys2.yml  package_debian.yml
ci/: 01-install-dependencies.sh  02-create-package.sh
debian/: changelog  control  copyright  glfwinfo.install  watch
documentation/: third-party.md
src/: CMakeLists.txt  glfw.cpp  glfw.hpp  glfwinfo.cbp  main.cpp
